Bug 402749 - "My Favorites" brush group doesn't load on startup
Summary: "My Favorites" brush group doesn't load on startup
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tagging (other bugs)
Version First Reported In: 4.1.7
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Ashwin Dhakaita
URL:
Keywords: triaged
: 403614 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-01-01 09:52 UTC by M
Modified: 2019-01-26 08:27 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Video (2.60 MB, video/mp4)
2019-01-03 10:38 UTC, mvowada
Details

Note You need to log in before you can comment on or make changes to this bug.
Description M 2019-01-01 09:52:10 UTC
SUMMARY
The "My Favorites" brush group doesn't load when it's the last selected brush group in the brush presets panel. Upon restarting Krita it shows up as empty until another brush group is selected and it's selected back. Other brush groups don't suffer from this bug.

STEPS TO REPRODUCE
1. Open a new file and select the "My Favorites" brush group (with at least 1 brush favorited) in the brush presets panel.
2. Restart Krita
3. Observe the brush panel shows "My Favorites" as empty until switched.

OBSERVED RESULT
Empty brush group on restart.

EXPECTED RESULT
"My Favorites" shows all favorited brushes inmediately after restart.

SOFTWARE/OS VERSIONS
Windows: 7 SP1 (Spanish) (x86_64)
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 5.9.3

ADDITIONAL INFORMATION
Comment 1 Halla Rempt 2019-01-03 09:06:55 UTC
Hm, I'm sorry, I cannot reproduce this. But it might actually be a localization problem. I'm working on rewriting everything that has to do with resources and tags in any case.
Comment 2 Rebecca Breu 2019-01-03 09:41:12 UTC
I can reproduce this, with any kind of tag actually ("My Favourites", tags I've made myself, default tags, tags from brush bundles I've imported). I'm on Debian Stable (US English) and have had this with pretty much any nightly build, for example the latest one (52afd0c), and 4.1.5. FWIW, all of those are appimages.
Comment 3 mvowada 2019-01-03 10:24:55 UTC
Hi, 

I can reproduce this as well (Krita 4.2.0-pre-alpha (git ea51095) - Ubuntu 14.04 - Gnome Compiz):

    1. "Brush presets" docker > select "My favorites" item from the dropdown list
    2. restart Krita

Actual Results: brush presets docker "My favorites" list will display as empty.
Comment 4 mvowada 2019-01-03 10:26:56 UTC
(Appimage)
Comment 5 Halla Rempt 2019-01-03 10:28:28 UTC
The original reporter uses Windows though, so that might be a different problem.
Comment 6 Halla Rempt 2019-01-03 10:29:47 UTC
Oh, which language is your system set to?
Comment 7 Halla Rempt 2019-01-03 10:31:19 UTC
I cannot reproduce this on KDE Neon with the 4.1.7 appimage and Plasma set to English US
Comment 8 mvowada 2019-01-03 10:38:09 UTC
Created attachment 117262 [details]
Video

Hi Boudewijn, I've made a video showing the issue, hope it helps.
Comment 9 Halla Rempt 2019-01-06 09:34:30 UTC
Ah, I was looking at the favorites popup, not the preset docker.
Comment 10 Halla Rempt 2019-01-25 12:12:10 UTC
Git commit b03f4ebbde9290db9c9f05539e1ca401fa579e42 by Boudewijn Rempt, on behalf of Ashwin Dhakaita.
Committed on 25/01/2019 at 12:12.
Pushed by rempt into branch 'master'.

Fix loading My Favorites tag on start-up
Differential revision:https://phabricator.kde.org/D18505

M  +1    -1    libs/widgets/KoTagChooserWidget.cpp

https://commits.kde.org/krita/b03f4ebbde9290db9c9f05539e1ca401fa579e42
Comment 11 Halla Rempt 2019-01-26 08:27:19 UTC
*** Bug 403614 has been marked as a duplicate of this bug. ***