Fix loading My Favorites tag on start-up

BUG:402749
Differential revision:https://phabricator.kde.org/D18505